--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,8 @@
 <div><h1>Home page V2</h1>
   <a routerLink="/about"><u> about page</u></a> <br> <br>
- <h1>Token will be generated in about page.</h1>
+  <button (click)="requestNotification()">Request notification button</button>
+  <br>
+  <h1>Token will be generated in about page.</h1>
  <b>Token:</b> <br>
  <p>{{showToken}}</p>
 </div>
