--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,7 @@
 <div><h1>Home page V2</h1>
   <a routerLink="/about"><u> about page</u></a> <br> <br>
   <button (click)="requestNotification()">Request notification button</button>
+  <button (click)="getToken()">get token</button>
   <button (click)="requestToken()">request token</button>
   <br>
   <h1>Token will be generated in about page.</h1>
